2013-12-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/genmoddep.awk: Remove explicit getline < /dev/stdin.

2013-12-15  Ian Campbell  <ijc@hellion.org.uk>

	* grub-core/kern/uboot/init.c: Fix units of uboot timer.

2013-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	New functional test for sleep function.

	This test allows to check sleep without qemu. Keep qemu version as
	well as functional test won't notice if all clocks are going too fast
	or too slow.

2013-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	Add explicit sysv_abi on amd64 asm routines.

2013-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/efi/lsefisystab.c: Use %lld to show
	num_table_entries.

2013-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/test.h: Use gnu_printf rather than printf on GRUB
	functions.

2013-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c: Use grub_addr_t rather than long when
	appropriate.

2013-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c: Use %p rather than %lx for pointers.

2013-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/elfXX.c: Use grub_addr_t rather than long when
	appropriate.

2013-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/loopback.c: Use sequential IDs rather than pointer.

	In case of quick removal of loopback and adding another one it may
	get same ID, confusing the cache system.

2013-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/acpi.c: Use grub_addr_t rather than long when
	appropriate.

2013-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/coreboot/cbtable.c: Use char * arithmetic rather
	than converting to long.

2013-12-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/cryptodisk.c: Rename "n" to "last_cryptodisk_id".

2013-12-15  Vladimir Serbinenko  <phcoder@gmail.com>
